@@ -35,7 +35,7 @@ public class ElasticSearchConfig extends ElasticsearchConfigurationSupport {
     private final Logger logger = LoggerFactory.getLogger(ElasticSearchConfig.class);
 
 
-    @Value("${elasticSearch.hostAndPort:172.25.107.186:9200}")
+    @Value("${elasticSearch.hostAndPort:localhost:9200}")
     private String hostAndPort;
 
     @Getter
@@ -114,7 +114,7 @@ public class ElasticSearchConfig extends ElasticsearchConfigurationSupport {
 
 
 //    @WritingConverter
-//    public class LocalDateTimeWritingConverter implements Converter<LocalDateTime, String>  {
+//    public class LocalDateTimeWritingConverter implements Converter<LocalDateTime, String> {
 //
 //        @Override
 //        public String convert(LocalDateTime source) {
@@ -123,7 +123,7 @@ public class ElasticSearchConfig extends ElasticsearchConfigurationSupport {
 //    }
 //
 //    @ReadingConverter
-//    public class LocalDateTimeReadingConverter implements Converter<String, LocalDateTime>  {
+//    public class LocalDateTimeReadingConverter implements Converter<String, LocalDateTime> {
 //
 //        @Override
 //        public LocalDateTime convert(String source) {
@@ -152,7 +152,7 @@ public class ElasticSearchConfig extends ElasticsearchConfigurationSupport {
 //    @Bean
 //    @Override
 //    public ElasticsearchCustomConversions elasticsearchCustomConversions() {
-//        return new ElasticsearchCustomConversions(List.of(new LocalDateTimeWritingConverter(),
+//        return new ElasticsearchCustomConversions(Arrays.asList(new LocalDateTimeWritingConverter(),
 //                new LocalDateTimeReadingConverter(), new LocalDateReadingConverter(),
 //                new LocalDateWritingConverter()));
 //    }
